--- a/Tomato_all.html
+++ b/Tomato_all.html
@@ -28,7 +28,7 @@
           
           <div id="menu">
             <ul>
-              <li><a href="">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="">Company Profile</a></li>
               <li><a href="">Products</a></li>
               <li><a href="">Services</a></li>
